target/generated-sources/antlr4/compilerOT/compilerOT/compilerOTParser.java
// Generated from compilerOT.g4 by ANTLR 4.4
package compilerOT.compilerOT;

	import java.util.Map;
	import java.util.HashMap;
	import java.util.List;
	import java.util.ArrayList;

	import AST.*;
	import java.io.BufferedWriter;
	import java.io.FileWriter;
	import java.io.IOException;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class compilerOTParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, VAR=2, PRINT=3, CONDITIONAL=4, ELSE=5, LOOP=6, PLUS=7, MINUS=8, 
		MULT=9, DIV=10, COMP_SYMBOLS=11, ASSIGN=12, BRACKET_OPEN=13, BRACKET_CLOSE=14, 
		PAR_OPEN=15, PAR_CLOSE=16, SEMICOLON=17, BOOLEAN=18, ID=19, STRING=20, 
		NUMBER=21, WS=22;
	public static final String[] tokenNames = {
		"<INVALID>", "'main() '", "'var'", "'print'", "'if'", "'else'", "'loop'", 
		"'+'", "'-'", "'*'", "'/'", "COMP_SYMBOLS", "'='", "'{'", "'}'", "'('", 
		"')'", "';'", "BOOLEAN", "ID", "STRING", "NUMBER", "WS"
	};
	public static final int
		RULE_program = 0, RULE_sentence = 1, RULE_var_decl = 2, RULE_var_assign = 3, 
		RULE_print = 4, RULE_conditional = 5, RULE_comp = 6, RULE_loop = 7, RULE_expression = 8, 
		RULE_factor = 9, RULE_term = 10, RULE_forparams = 11;
	public static final String[] ruleNames = {
		"program", "sentence", "var_decl", "var_assign", "print", "conditional", 
		"comp", "loop", "expression", "factor", "term", "forparams"
	};

	@Override
	public String getGrammarFileName() { return "compilerOT.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		Map<String, Object> symbolTable = new HashMap<String, Object>();
		BufferedWriter buffer;
		IdentControl i = new IdentControl();

	public compilerOTParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public SentenceContext sentence;
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public TerminalNode BRACKET_CLOSE() { return getToken(compilerOTParser.BRACKET_CLOSE, 0); }
		public TerminalNode BRACKET_OPEN() { return getToken(compilerOTParser.BRACKET_OPEN, 0); }
		public TerminalNode PROGRAM() { return getToken(compilerOTParser.PROGRAM, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compilerOTListener ) ((compilerOTListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compilerOTListener ) ((compilerOTListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24); match(PROGRAM);
			setState(25); match(BRACKET_OPEN);

				List<ASTNode> body = new ArrayList<ASTNode>();
					Map<String, Object> symbolTable = new HashMap<String, Object>();
				
			setState(32);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << PRINT) | (1L << CONDITIONAL) | (1L << ID))) != 0)) {
				{
				{
				setState(27); ((ProgramContext)_localctx).sentence = sentence();
				body.add(((ProgramContext)_localctx).sentence.node);
				}
				}
				setState(34);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(35); match(BRACKET_CLOSE);

					try {
						buffer = new BufferedWriter(new FileWriter("./saida.py"));
						buffer.append("# Código gerado através do compilador OT Lang\n\n");
			        } catch (IOException ex) {
			        	System.out.println(ex);
			        }
			        
					for(ASTNode n : body) {
						if (n != null)
							n.execute(symbolTable, buffer);
					}
					
					try {
						buffer.close();
					} catch (IOException ex) {
			        	System.out.println(ex);
			        }
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public ASTNode node;
		public PrintContext print;
		public ConditionalContext conditional;
		public Var_declContext var_decl;
		public Var_assignContext var_assign;
		public LoopContext loop;
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public ConditionalContext conditional() {
			return getRuleContext(ConditionalContext.class,0);
		}
		public Var_assignContext var_assign() {
			return getRuleContext(Var_assignContext.class,0);
		}
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compilerOTListener ) ((compilerOTListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compilerOTListener ) ((compilerOTListener)listener).exitSentence(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentence);
		try {
			setState(53);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(38); ((SentenceContext)_localctx).print = print();
				((SentenceContext)_localctx).node = ((SentenceContext)_localctx).print.node;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(41); ((SentenceContext)_localctx).conditional = conditional();
				((SentenceContext)_localctx).node = ((SentenceContext)_localctx).conditional.node;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(44); ((SentenceContext)_localctx).var_decl = var_decl();
				((SentenceContext)_localctx).node = ((SentenceContext)_localctx).var_decl.node;
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(47); ((SentenceContext)_localctx).var_assign = var_assign();
				((SentenceContext)_localctx).node = ((SentenceContext)_localctx).var_assign.node;
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(50); ((SentenceContext)_localctx).loop = loop();
				((SentenceContext)_localctx).node = ((SentenceContext)_localctx).loop.node;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declContext extends ParserRuleContext {
		public ASTNode node;
		public Token ID;
		public TerminalNode ID() { return getToken(compilerOTParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(compilerOTParser.SEMICOLON, 0); }
		public TerminalNode VAR() { return getToken(compilerOTParser.VAR, 0); }
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compilerOTListener ) ((compilerOTListener)listener).enterVar_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compilerOTListener ) ((compilerOTListener)listener).exitVar_decl(this);
		}
	}

	public final Var_declContext var_decl() throws RecognitionException {
		Var_declContext _localctx = new Var_declContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_var_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); match(VAR);
			setState(56); ((Var_declContext)_localctx).ID = match(ID);
			setState(57); match(SEMICOLON);
			((Var_declContext)_localctx).node =  new VarDecl((((Var_declContext)_localctx).ID!=null?((Var_declContext)_localctx).ID.getText():null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_assignContext extends ParserRuleContext {
		public ASTNode node;
		public Token ID;
		public ExpressionContext expression;
		public TerminalNode ID() { return getToken(compilerOTParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(compilerOTParser.ASSIGN, 0); }
		public TerminalNode SEMICOLON() { return getToken(compilerOTParser.SEMICOLON, 0); }
		public TerminalNode VAR() { return getToken(compilerOTParser.VAR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Var_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compilerOTListener ) ((compilerOTListener)listener).enterVar_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compilerOTListener ) ((compilerOTListener)listener).exitVar_assign(this);
		}
	}

	public final Var_assignContext var_assign() throws RecognitionException {
		Var_assignContext _localctx = new Var_assignContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var_assign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(60); match(VAR);
				}
			}

			setState(63); ((Var_assignContext)_localctx).ID = match(ID);
			setState(64); match(ASSIGN);
			setState(65); ((Var_assignContext)_localctx).expression = expression();
			setState(66); match(SEMICOLON);

					((Var_assignContext)_localctx).node =  new VarAssign((((Var_assignContext)_localctx).ID!=null?((Var_assignContext)_localctx).ID.getText():null), ((Var_assignContext)_localctx).expression.node);
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public ASTNode node;
		public ExpressionContext expression;
		public TerminalNode SEMICOLON() { return getToken(compilerOTParser.SEMICOLON, 0); }
		public TerminalNode PRINT() { return getToken(compilerOTParser.PRINT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compilerOTListener ) ((compilerOTListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compilerOTListener ) ((compilerOTListener)listener).exitPrint(this);
		}
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_print);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69); match(PRINT);
			setState(70); ((PrintContext)_localctx).expression = expression();
			setState(71); match(SEMICOLON);

					((PrintContext)_localctx).node =  new Print((((PrintContext)_localctx).expression!=null?_input.getText(((PrintContext)_localctx).expression.start,((PrintContext)_localctx).expression.stop):null));
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalContext extends ParserRuleContext {
		public ASTNode node;
		public ExpressionContext expression;
		public SentenceContext s2;
		public SentenceContext s3;
		public TerminalNode ELSE() { return getToken(compilerOTParser.ELSE, 0); }
		public TerminalNode PAR_CLOSE() { return getToken(compilerOTParser.PAR_CLOSE, 0); }
		public TerminalNode CONDITIONAL() { return getToken(compilerOTParser.CONDITIONAL, 0); }
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public List<TerminalNode> BRACKET_CLOSE() { return getTokens(compilerOTParser.BRACKET_CLOSE); }
		public TerminalNode PAR_OPEN() { return getToken(compilerOTParser.PAR_OPEN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<TerminalNode> BRACKET_OPEN() { return getTokens(compilerOTParser.BRACKET_OPEN); }
		public TerminalNode BRACKET_OPEN(int i) {
			return getToken(compilerOTParser.BRACKET_OPEN, i);
		}
		public TerminalNode BRACKET_CLOSE(int i) {
			return getToken(compilerOTParser.BRACKET_CLOSE, i);
		}
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public ConditionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compilerOTListener ) ((compilerOTListener)listener).enterConditional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compilerOTListener ) ((compilerOTListener)listener).exitConditional(this);
		}
	}

	public final ConditionalContext conditional() throws RecognitionException {
		ConditionalContext _localctx = new ConditionalContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_conditional);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74); match(CONDITIONAL);
			setState(75); match(PAR_OPEN);
			setState(76); ((ConditionalContext)_localctx).expression = expression();
			setState(77); match(PAR_CLOSE);

					
					List<ASTNode> 	body = new ArrayList<ASTNode>(),
									elseBody = null;
									
				
			setState(79); match(BRACKET_OPEN);
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << PRINT) | (1L << CONDITIONAL) | (1L << ID))) != 0)) {
				{
				{
				setState(80); ((ConditionalContext)_localctx).s2 = sentence();
				body.add(((ConditionalContext)_localctx).s2.node);
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(88); match(BRACKET_CLOSE);
			setState(101);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(89); match(ELSE);

						elseBody = new ArrayList<ASTNode>();
					
				setState(91); match(BRACKET_OPEN);
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << PRINT) | (1L << CONDITIONAL) | (1L << ID))) != 0)) {
					{
					{
					setState(92); ((ConditionalContext)_localctx).s3 = sentence();
					elseBody.add(((ConditionalContext)_localctx).s3.node);
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(100); match(BRACKET_CLOSE);
				}
			}


					((ConditionalContext)_localctx).node =  new If((((ConditionalContext)_localctx).expression!=null?_input.getText(((ConditionalContext)_localctx).expression.start,((ConditionalContext)_localctx).expression.stop):null), body, elseBody);
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompContext extends ParserRuleContext {
		public ASTNode node;
		public TerminalNode ID() { return getToken(compilerOTParser.ID, 0); }
		public TerminalNode COMP_SYMBOLS() { return getToken(compilerOTParser.COMP_SYMBOLS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public CompContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compilerOTListener ) ((compilerOTListener)listener).enterComp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compilerOTListener ) ((compilerOTListener)listener).exitComp(this);
		}
	}

	public final CompContext comp() throws RecognitionException {
		CompContext _localctx = new CompContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_comp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105); match(ID);
			setState(106); match(COMP_SYMBOLS);
			setState(107); expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopContext extends ParserRuleContext {
		public ASTNode node;
		public Token ID;
		public ForparamsContext s1;
		public SentenceContext s2;
		public TerminalNode ID() { return getToken(compilerOTParser.ID, 0); }
		public TerminalNode LOOP() { return getToken(compilerOTParser.LOOP, 0); }
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public TerminalNode BRACKET_CLOSE() { return getToken(compilerOTParser.BRACKET_CLOSE, 0); }
		public TerminalNode BRACKET_OPEN() { return getToken(compilerOTParser.BRACKET_OPEN, 0); }
		public ForparamsContext forparams(int i) {
			return getRuleContext(ForparamsContext.class,i);
		}
		public List<ForparamsContext> forparams() {
			return getRuleContexts(ForparamsContext.class);
		}
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public LoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compilerOTListener ) ((compilerOTListener)listener).enterLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compilerOTListener ) ((compilerOTListener)listener).exitLoop(this);
		}
	}

	public final LoopContext loop() throws RecognitionException {
		LoopContext _localctx = new LoopContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_loop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109); ((LoopContext)_localctx).ID = match(ID);
			setState(110); match(LOOP);

					List<ASTNode> params = new ArrayList<ASTNode>();
					List<ASTNode> body = new ArrayList<ASTNode>();
				
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NUMBER) {
				{
				{
				setState(112); ((LoopContext)_localctx).s1 = forparams();
				params.add(((LoopContext)_localctx).s1.node);
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120); match(BRACKET_OPEN);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << PRINT) | (1L << CONDITIONAL) | (1L << ID))) != 0)) {
				{
				{
				setState(121); ((LoopContext)_localctx).s2 = sentence();
				body.add(((LoopContext)_localctx).s2.node);
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(129); match(BRACKET_CLOSE);

					if (params.size() > 3) {
						System.out.println("ERRO! Mais que 3 parâmetros.");
						
					}
					
					((LoopContext)_localctx).node =  new For((((LoopContext)_localctx).ID!=null?((LoopContext)_localctx).ID.getText():null), params, body);
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ASTNode node;
		public FactorContext t1;
		public FactorContext t2;
		public FactorContext t3;
		public List<FactorContext> factor() {
			return getRuleContexts(FactorContext.class);
		}
		public TerminalNode MINUS(int i) {
			return getToken(compilerOTParser.MINUS, i);
		}
		public FactorContext factor(int i) {
			return getRuleContext(FactorContext.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(compilerOTParser.PLUS); }
		public List<TerminalNode> MINUS() { return getTokens(compilerOTParser.MINUS); }
		public TerminalNode PLUS(int i) {
			return getToken(compilerOTParser.PLUS, i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compilerOTListener ) ((compilerOTListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compilerOTListener ) ((compilerOTListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_expression);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(132); ((ExpressionContext)_localctx).t1 = factor();
			((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).t1.node;
			setState(140);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(134); match(PLUS);
					setState(135); ((ExpressionContext)_localctx).t2 = factor();
					((ExpressionContext)_localctx).node =  new Addition(_localctx.node, ((ExpressionContext)_localctx).t2.node);
					}
					} 
				}
				setState(142);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(149);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(143); match(MINUS);
					setState(144); ((ExpressionContext)_localctx).t3 = factor();
					((ExpressionContext)_localctx).node =  new Subtraction(_localctx.node, ((ExpressionContext)_localctx).t3.node);
					}
					} 
				}
				setState(151);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactorContext extends ParserRuleContext {
		public ASTNode node;
		public TermContext t1;
		public TermContext t2;
		public TermContext t3;
		public TerminalNode MULT(int i) {
			return getToken(compilerOTParser.MULT, i);
		}
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<TerminalNode> MULT() { return getTokens(compilerOTParser.MULT); }
		public List<TerminalNode> DIV() { return getTokens(compilerOTParser.DIV); }
		public TerminalNode DIV(int i) {
			return getToken(compilerOTParser.DIV, i);
		}
		public FactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compilerOTListener ) ((compilerOTListener)listener).enterFactor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compilerOTListener ) ((compilerOTListener)listener).exitFactor(this);
		}
	}

	public final FactorContext factor() throws RecognitionException {
		FactorContext _localctx = new FactorContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_factor);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(152); ((FactorContext)_localctx).t1 = term();
			((FactorContext)_localctx).node =  ((FactorContext)_localctx).t1.node;
			setState(160);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(154); match(MULT);
					setState(155); ((FactorContext)_localctx).t2 = term();
					((FactorContext)_localctx).node =  new Multiplication(_localctx.node, ((FactorContext)_localctx).t2.node);
					}
					} 
				}
				setState(162);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(169);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(163); match(DIV);
					setState(164); ((FactorContext)_localctx).t3 = term();
					{
					((FactorContext)_localctx).node =  new Division(_localctx.node, ((FactorContext)_localctx).t3.node);
					}
					}
					} 
				}
				setState(171);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
